# research-vlm-based-document-parsing

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
configs/: default.yaml  evaluation.yaml  training.yaml
data/test_1/: gt_data_1.md
data/test_2/: gt_data_2.md
data/test_3/: gt_data_3.md
data/test_4/: gt_data_4.md
data/test_5/: gt_data_5.md
docs/: e2e_post_training_guide.md  evaluation_metrics_papers.md
docs/paper/: 00_Abstract.md  01_Introduction.md  02_Related_Work.md  03_Methodology.md  04_Experimental_Setup.md  05_Results.md  06_Discussion.md  07_Conclusion.md  08_References.md  appendix_chunking_metrics.md  v1_vs_v2_comparison.md
docs/paper/appendix/: A_Prompt_Variations.md  B_Full_Results_Tables.md  C_Error_Case_Studies.md  D_Query_Set_Generation.md  E_Chunking_Strategy_Details.md  F_Per_Document_Type_Results.md  G_Training_Analysis.md
docs/tech_report/: 00_Abstract.md  01_Introduction.md  02_Related_Work.md  03_Methodology.md  04_Experimental_Setup.md  05_Results.md  06_Discussion.md  07_Conclusion.md  08_References.md
docs/tech_report/appendix/: A_Prompt_Variations.md  B_Full_Results_Tables.md  C_Error_Case_Studies.md
evaluation/: __init__.py  cli.py
evaluation/benchmarks/: docvqa.py  kogovdoc.py  omnidocbench.py
evaluation/metrics/: __init__.py  cer.py  chunking.py  ned.py  structure.py  teds.py
evaluation/omnidocbench/: __init__.py  evaluator.py  extractor.py  matcher.py  normalizer.py
evaluation/runners/: __init__.py  chunking_eval.py  parser_eval.py
experiments/: config.yaml  generate_qa.py
scripts/: generate_pseudo_gt.py  papers_validation_summary.sh  prepare_training_data.py  regenerate_failed.py  run_omnidocbench_eval.py  run_omnidocbench_inference.py  setup_datasets.py  validate_gt.py
src/: app.py  dashboard_analysis.py  eval_chunking.py  eval_parsers.py  run_benchmark.py  test_parsers.py
src/chunking/: __init__.py  chunker.py  metrics.py
src/dashboard/: __init__.py  charts.py  data_loader.py  styles.py
src/dataset/: arxiv_downloader.py  arxiv_paper_list.json  build_arxiv_dataset.py  latex_postprocess.py  latex_to_markdown.py  validate_gt.py
src/error_analysis/: __init__.py  analyzer.py  case_study.py  diff_visualizer.py
src/evaluation/: __init__.py
src/parsers/: __init__.py  docling_parser.py  ocr_parser.py  text_structurer.py  two_stage_parser.py  vlm_parser.py
src/retrieval/: __init__.py  embedder.py  evaluator.py  retriever.py
tests/: test_parsing_cli.py
training/: __init__.py  config.py  data_prep.py  gt_generator.py  gt_validator.py  lora_trainer.py
training/prompts/: templates.py
wigtnocr/: __init__.py
wigtnocr/chunking/: __init__.py  chunker.py  metrics.py
wigtnocr/parsers/: __init__.py  base.py  pymupdf.py  rapidocr.py  vlm.py
wigtnocr/pipeline/: __init__.py  hybrid.py  two_stage.py
wigtnocr/utils/: markdown.py
