[project]
name = "vlm-document-parsing-test"
version = "0.2.0"
description = "VLM Document Parsing Quality Evaluation Framework"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.45.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "Pillow>=10.0.0",
    "jiwer>=3.0.0",
    "python-Levenshtein>=0.25.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
    "pdf2image>=1.16.0",
    "konlpy>=0.6.0",
]

[project.optional-dependencies]
korean = [
    "konlpy>=0.6.0",
]

visualization = [
    "plotly>=5.18.0",
]

docling = [
    "docling>=2.0.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

all = [
    "vlm-document-parsing-test[korean,visualization,docling,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parsers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
