[project]
name = "vlm-document-parsing-test"
version = "0.2.0"
description = "Document Parsing Structure Preservation Impact Evaluation Framework"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.45.0",
    "httpx>=0.27.0",
    "PyMuPDF>=1.24.0",
    "rapidocr-pdf>=0.4.0",
    "rapidocr-onnxruntime>=1.4.0",
    "Pillow>=10.0.0",
    "jiwer>=3.0.0",
    "python-Levenshtein>=0.25.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
    "konlpy>=0.6.0",
    "pytest>=9.0.2",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "fitz>=0.0.1.dev2",
    "langchain-experimental>=0.3.0",
    "langchain-core>=0.3.0",
    "apted>=1.0.3",
    "mistletoe>=1.4.0",
]

[project.optional-dependencies]
korean = [
    "konlpy>=0.6.0",
]

visualization = [
    "plotly>=5.18.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

all = [
    "vlm-document-parsing-test[korean,visualization,dev]",
]

[project.scripts]
test-chunking = "src.test_chunking:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parsers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
