[project]
name = "wigtnocr"
version = "0.1.0"
description = "VLM-based Korean Government Document Intelligence Parser"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "jiwer>=3.0.0",
    "python-Levenshtein>=0.25.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
    "langchain-experimental>=0.3.0",
    "langchain-core>=0.3.0",
    "apted>=1.0.3",
    "mistletoe>=1.4.0",
]

[project.optional-dependencies]
ocr = [
    "rapidocr-pdf>=0.4.0",
    "rapidocr-onnxruntime>=1.4.0",
]

korean = [
    "konlpy>=0.6.0",
]

training = [
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "accelerate>=0.30.0",
    "datasets>=2.18.0",
    "bitsandbytes>=0.43.0",
]

evaluation = [
    "pandas>=2.0.0",
    "sentence-transformers>=2.6.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

all = [
    "wigtnocr[ocr,korean,training,evaluation,dev]",
]

[project.scripts]
wigtnocr-eval = "evaluation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wigtnocr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
